--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: roboto, Tahoma, sans-serif;
+}
+
 img {
   width: 10%;
 }
@@ -5,12 +9,30 @@ img {
 .body, .header {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+.header, .footer {
+  background-color: #1f2937;
+}
+
+.header {
+  gap: 10px;
+  padding: 0 20px;
 }
 
 .top {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex: 1;
+  border: 2px solid white;
+}
+
+.hero-text {
+  font-size: 48px;
+  font-weight: 900;
+  color: #F9FAF8;
 }
 
 ul {
@@ -19,7 +41,37 @@ ul {
   gap: 10px;
 }
 
+ul, .secondary-text {
+  color: #E5E7EB;
+  font-size: 18px;
+}
+
 .bottom {
   display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-logo {
+  font-size: 24px;
+  color: #F9FAF8;
+}
+
+.img {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  color: white;
+  background-color: grey;
+  width: 250px;
+  height: 150px;
+}
+
+.header-text {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 400px;
+  border: 2px solid white;
 }
 
