--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ body {
   font-family: roboto, Tahoma, sans-serif;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
 img {
   width: 10%;
 }
@@ -18,7 +23,8 @@ img {
 
 .header {
   gap: 10px;
-  padding: 0 20px;
+  padding: 0 60px;
+  padding-bottom: 40px;
 }
 
 .top {
@@ -26,7 +32,7 @@ img {
   justify-content: space-between;
   align-items: center;
   flex: 1;
-  border: 2px solid white;
+  /* border: 2px solid white; */
 }
 
 .hero-text {
@@ -44,12 +50,15 @@ ul {
 ul, .secondary-text {
   color: #E5E7EB;
   font-size: 18px;
+  /* border: 2px solid white; */
 }
 
 .bottom {
   display: flex;
   align-items: center;
-  gap: 40px;
+  justify-content: center;
+  gap: 20px;
+  /* border: 2px solid white; */
 }
 
 .header-logo {
@@ -59,19 +68,31 @@ ul, .secondary-text {
 
 .img {
   display: flex;
-  text-align: center;
+  justify-content: center;
   align-items: center;
   color: white;
   background-color: grey;
-  width: 250px;
-  height: 150px;
+  width: 400px;
+  height: 225px;
 }
 
 .header-text {
   display: flex;
   flex-direction: column;
   width: 400px;
-  height: 400px;
-  border: 2px solid white;
+  height: 300px;
+  /* border: 2px solid white; */
+  justify-content: center;
+  flex: 1;
+  gap: 10px;
 }
 
+.button-top {
+  width: 90px;
+  height: 25px;
+  background-color: #3882F6;
+  color: #F9FAF8;
+  font-weight: bold;
+  border-radius: 6px;
+  border-color: #3882F6;
+}
