--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ p {
   justify-content: space-between;
   align-items: center;
   flex: 1;
+  padding-top: 20px;
   /* border: 2px solid white; */
 }
 
@@ -47,7 +48,7 @@ p {
 ul {
   display: flex;
   list-style-type: none;
-  gap: 10px;
+  gap: 20px;
 }
 
 ul, .secondary-text {
@@ -60,23 +61,20 @@ ul, .secondary-text {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 60px;
   /* border: 2px solid white; */
 }
 
 .header-logo {
-  font-size: 24px;
-  color: #F9FAF8;
+  width: 120px;
 }
 
 .header-img {
   display: flex;
   justify-content: center;
-  align-items: center;
-  color: white;
-  background-color: grey;
-  width: 400px;
-  height: 225px;
+  width: 35%;
+  border-radius: 8px;
+  /* border: 2px solid black; */
 }
 
 .header-text {
@@ -87,7 +85,7 @@ ul, .secondary-text {
   /* border: 2px solid white; */
   justify-content: center;
   flex: 1;
-  gap: 10px;
+  gap: 20px;
 }
 
 .button-top {
@@ -107,15 +105,12 @@ ul, .secondary-text {
   display: flex;
   flex-direction: column;
   flex: 1;
-  /* DELETE GAP BELOW ONCE DONE FORMATTING */
-  /* gap: 80px; */
 }
 
 .content-top {
   display: flex;
   flex-direction: column;
-  padding-top: 30px;
-  padding-bottom: 80px;
+  padding: 30px 120px 80px 120px;
   gap: 20px;
   /* border: 2px solid black; */
 }
@@ -160,7 +155,7 @@ ul, .secondary-text {
   justify-content: center;
   background-color: #E5E7EB;
   /* border: 2px solid black; */
-  padding: 100px;
+  padding: 100px 180px;
   flex: 1;
   color: #1f2937;
   gap: 10px;
@@ -215,6 +210,14 @@ ul, .secondary-text {
   border: 2px solid #F9FAF8;
 }
 
+/* FOOTER STUFF BELOW */
+
+.footer {
+  background-color: #1f2937;
+  color: #E5E7EB;
+  text-align: center;
+  padding: 30px;
+}
 
 
 
