--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,14 @@ p {
   padding: 0;
 }
 
-/* HEADER WEBSITE STUFF */
+a:link, a:visited {
+  text-decoration: none;
+  color: #F9FAF8;
+}
+
+a:hover {
+  font-weight: bold;
+}
 
 .img > img {
 
@@ -72,8 +79,9 @@ ul, .secondary-text {
 .header-img {
   display: flex;
   justify-content: center;
-  width: 35%;
+  width: 400px;
   border-radius: 8px;
+  flex: 0;
   /* border: 2px solid black; */
 }
 
@@ -97,6 +105,7 @@ ul, .secondary-text {
   border-radius: 6px;
   border-color: #3882F6;
   border: none;
+  cursor: pointer;
 }
 
 /* MAIN BODY & CONTENT WEBSITE STUFF */
@@ -208,6 +217,7 @@ ul, .secondary-text {
   width: 160px;
   border-radius: 4px;
   border: 2px solid #F9FAF8;
+  cursor: pointer;
 }
 
 /* FOOTER STUFF BELOW */
