--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,11 @@ a:hover {
 }
 
 .img > img {
-
-  width: 150px;
+  width: 250px;
+  height: 150px;
+  border-radius: 10px;
+  /* border: 2px solid black; */
+  margin: 10px;
 }
 
 .body, .header {
@@ -146,7 +149,7 @@ ul, .secondary-text {
   text-align: center;
   gap: 10px;
   /* border: 2px solid black; */
-  min-width: 200px;
+  /* min-width: 200px; */
 }
 
 .subtext {
@@ -155,6 +158,7 @@ ul, .secondary-text {
   /* border: 2px solid black; */
   flex: 1;
   flex-wrap: wrap;
+  color: #1f2937;
   
 }
 
